--- a/DL Literature Review - Copy (2).tex
+++ b/DL Literature Review - Copy (2).tex
@@ -4,22 +4,22 @@
 \usepackage[inline]{enumitem}
 \usepackage{xcolor}
 \usepackage[hidelinks]{hyperref}
-\usepackage[affil-it]{authblk}
+
 \usepackage{todonotes}
 \newcommand{\specialcell}[2][c]{%
 		\begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}	
 %To disable notes:
 %\usepackage[disable]{todonotes}
 %opening
-\let\oldref\ref
-\renewcommand{\ref}[1]{(\oldref{#1})}
+\author{Vasileios Lampridis	(1465093)}
+\title{A practical review of Deep Learning methods}
 \begin{document}
-	\author{Vasileios Lampridis}	
-	\title{A practical review of Deep Learning methods}
-	\affil{Department of Informatics, King's College London}
-	\date{}
-	\maketitle	
+	
+\tableofcontents
+\newpage
 
+\maketitle
+\listoftodos
 \begin{abstract}
 	This work reviews the promising domain of Deep Machine Learning, with the purpose of providing the practical information about the field. It explains the limitations of shallow architectures, which motivated the development of deep architectures. It provides an intuitive explanation of distributed representations, which is the learning objective of Deep Learning methods. It  describes the three most popular methods in the field, namely Convolutional Neural Networks, Deep Belief Networks and Stacked Autoencoders, providing a brief comparison between them. It explains important ideas concerning the implementation of these methods. Lastly, it provides an overview of the applications of deep representation learning methods in the domains of Computer Vision and Natural Language Processing.
 \end{abstract}
@@ -33,10 +33,9 @@
 	% To give an example of such potential problems, it was recently found \cite{Nguyen2014} that Convolutional Neural Networks, a deep architecture for image clasification, are susceptible to reverse-engineering input images so that classified with high certainty by multiple such networks, even though the image can be incomprehensible to humans. This could mean that their use in an adversarial environment may not be a safe choice, .
 	
 	\paragraph{Outline}
-		
-		In the following sections, this paper explains the reasons why other Machine Learning methods fall short in a number of tasks and, thus, what are the cases where a Deep Learning method should be examined in \autoref{sec:Limitations}.	Basic concepts that are common in all representation learning methods are presented in \autoref{sec:Dist. rep.} with the focus of providing the theory that explains why deeper architectures have superior performance in some tasks.
-		The three most popular deep architectures are briefly reviewed, Convolutional Neural Networks (\ref{sec:CNN}), Deep Belief Networks (\ref{sec:DBN}) and Stacked Autoencoders (\ref{sec:SAE}), attempting to explain the ideas that justify their design. Two important implementation ideas that improve the performance of such methods are presented, layer-wise pre-training (\ref{par:Pre-training}) and dropout (\ref{par:Dropout}).
-		Following, the most successful applications of Deep Learning are reviewed, in the domains of Computer Vision (\ref{sec:CV}) and Natural Language Processing (\ref{sec: NLP_Audio}).
+		We explain the reasons why other Machine Learning methods fall short in a number of tasks and, thus, what are the cases where a Deep Learning method should be examined in \autoref{sec:Limitations}.	Basic concepts that are common in all representation learning methods are presented in \autoref{sec:Basic ideas}, with the focus of providing the theory that explains why deeper architectures have exceptional performance in some tasks.
+		The three most popular deep architectures are briefly reviewed, Convolutional Neural Networks \ref{sec:CNN}, Deep Belief Networks \ref{sec:DBN} and Stacked Autoencoders \ref{sec:SAE}, attempting to explain the ideas that justify their design. Two important implementation ideas that improve the performance of such methods are presented, layer-wise pre-training \ref{par:Pre-training} and dropout \ref{par:Dropout}.
+		Following, the most successful applications of Deep Learning are reviewed, in the domains of Computer Vision \ref{sec:CV} and Natural Language Processing \ref{sec: NLP_Audio}.
 		
 	
 \section{Limitations of shallow architectures}
@@ -57,7 +56,7 @@
 	\label{sub: eng. features}
 		One of the approaches to circumvent the limitations discussed previously is to simplify the input by applying a domain specific preprocessing. To provide a comparison with the above discussion of kernel based methods, this is equivalent to designing non-local kernels that are based on prior knowledge about the task. The aims of this step are to reduce the dimensions of the input and create a (more) separable and smooth structure of the data so that, when presented to an approximator, it can be more accurate. The problem with this approach is that the process is domain specific\cite{Bengio2007}. For example, a system designed to recognise cars should not  be able to recognise animals. Moreover, the development of such methods relies heavily on the intuition around the problem and thus requires domain expertise and it is a slow trial and error process, which is costly in human capital. Before the use of deep architectures, most top performing methods involved domain-specific preprocessing. However, when retrospectively compared with Deep Learning methods on common benchmarking datasets for audio and visual problems, this engineered feature extraction produces results of lower accuracy \cite{Krizhevsky2012}. 
 		
-		A pattern that has to be emphasised here is that the biggest successes of Deep Learning are on domains where there is limited intuition about the form of the function to be approximated, like tasks in vision, audio recognition and language. Arguably though, engineered feature extraction makes perfect sense in domains that there is explicit knowledge about the relation of the input with the output. For example,one could try and train a machine to retrieve the content out of an HTML page, but since it is known exactly how HTML works, it is much easier and more effective to extract the content using an engineered method like a web scraping tool.
+		A pattern that has to be emphasised here is that the biggest successes of Deep Learning are on domains where we have limited intuition about the form of the function to be approximated, like tasks in vision, audio recognition and language. Arguably though, engineered feature extraction makes perfect sense in domains that we have explicit knowledge about the relation of the input with the output. For example,one could try and train a machine to retrieve the content out of an HTML page, but since it is known exactly how HTML works, it is much easier and more effective to extract the content using an engineered method like a web scraping tool.
 	
 	In summary, shallow architectures and local learning algorithms need an infeasible amount of parameters to approximate the structure of functions with high curvature. Methods created to avoid this curse of dimensionality are designed for specific tasks and are not expected to be transferable in others of similar nature. Therefore, a number of points that serve as good indicators that a deep architecture should be tried for a given task are summarised in the following list, which is by no means exhaustive: 
 	\begin{itemize}
@@ -68,7 +67,7 @@
 	\paragraph{Setbacks in investigation of deeper models}
 	Since the methods described above constituted the dominant approach despite having the aforementioned limitations yet they were the dominant approach, it is natural to wonder what hindered the development of more suitable methods. Before introducing the approach of deep architectures, it would be useful to discuss the main difficulties that kept the research away from a more extensive investigation of this approach.
 	
-	The main problem faced when trying to train Neural Networks with many hidden layers is that during the training they exhibit the problem of the so-called "vanishing or exploding gradient" that leads to poor accuracy. During the training process, the gradient that changes the weights of the lower layers gets very small or sometimes very large, preventing the effective training of these layers, which leads to a low accuracy of the Neural Network \cite{Bengio2009} This problem has been studied, with multiple possible explanations provided, beyond the current scopes of this paper, by \cite{Bengio2007}. The consequences of the problem above is that shallower architectures, due to their easier training, were outperforming deeper architectures. This occurs despite the fact that a network with n+1 layers can theoretically have  all the expressive power of a network with n layers, implying that it is the training method that is problematic rather than the architecture. This obstacle was overtaken by a greedy layer-wise training method, that could be said to mark the beginning of Deep Learning, and is explained at (\ref{par:Pre-training}). It has to be mentioned though, that Convolutional Neural Networks (\ref{sec:CNN}), probably due their specific, constrained architecture, had multiple layers, yet they were able to be trained without the need of the aforementioned method.
+	The main problem faced when trying to train Neural Networks with many hidden layers is that during the training they exhibit the problem of the so-called "vanishing or exploding gradient" that leads to poor accuracy. During the training process, the gradient that changes the weights of the lower layers gets very small or sometimes very large, preventing the effective training of these layers, which leads to a low accuracy of the Neural Network \cite{Bengio2009} This problem has been studied, with multiple possible explanations provided, beyond the current scopes of this paper, by \cite{Bengio2007}. The consequences of the problem above is that shallower architectures, due to their easier training, were outperforming deeper architectures. This occurs despite the fact that a network with n+1 layers can theoretically have  all the expressive power of a network with n layers, implying that it is the training method that is problematic rather than the architecture. This obstacle was overtaken by a greedy layer-wise training method, that could be said to mark the beginning of Deep Learning, and is explained at \ref{par:Pre-training}. It has to be mentioned though, that Convolutional Neural Networks \ref{sec:CNN}, probably due their specific, constrained architecture, had multiple layers, yet they were able to be trained without the need of the aforementioned method.
 \section{Distributed Representations}
 	\label{sec:Dist. rep.}
 %	\paragraph{Promise of DL}
@@ -90,13 +89,13 @@
 
 	\section{Deep Architectures}
 	\label{Architectures}
-		Since the field is young, many different architectures and variations have been tried. Out of these, three stand out as the most successful and well-researched: 1) Convolutional Neural Networks, 2) Deep Belief Networks and 3) Stacked Autoencoders. \cite{Bengio2013c} provides an excellent review that focuses on these three architectures.
+		Since the field is young, many different architectures and variations have been tried. Out of these, three stand out as the most successful and well-researched: 1) Convolutional Neural Networks, 2) Deep Belief Networks and 3) Stacked Autoencoders. \cite{Bengio2012} provides an excellent review that focuses on these three architectures.
 		
 		\subsection{Convolutional Neural Networks}
 		\label{sec:CNN}			
 		Convolutional Neural Networks is an architecture that, in contrast to other methods, is designed specifically for image classification. It is initially inspired by models of the visual cortex of the brain \cite{Fukushima1980}, and is,thus, designed using simple priors about the structure of visual information (images) \cite{Bengio2013c}. It has attracted great attention due to the large error reduction that its variations have achieved in recognised computer vision challenges like ImageNet \cite{Deng2009a}. It is unique in the family of deep architectures in the sense that it does not need a layer-wise pre-training to converge to accurate solutions, this property makes them practically the only deep architecture the existed before 2006, when this pre-training allowed other models to emerge.		
 		
-		Excellent descriptions of older designs are provided in \cite{LeCun1989,LeCun1990,Lecun1995,LeCun1998}, which convey the most important ideas around their design. Later implementations, that achieved top performance in image classification tasks, are explained in \cite{Krizhevsky2012}. The main ideas that improved the performance and accuracy of these methods are the use of dropout (\ref{par:Dropout}) as a regularisation method and the use of Rectified Linear Units (ReLU) instead of the usual sigmoid functions used in most Neural Networks \cite{Dahl2013}.	
+		Excellent descriptions of older designs are provided in \cite{LeCun1989,LeCun1990,Lecun1995,LeCun1998}, which convey the most important ideas around their design. Later implementations, that achieved top performance in image classification tasks, are explained in \cite{Krizhevsky2012}. The main ideas that improved the performance and accuracy of these methods are the use of dropout \ref{par:Dropout} as a regularisation method and the use of Rectified Linear Units (ReLU) instead of the usual sigmoid functions used in most Neural Networks \cite{Dahl2013}.	
 		
 		Since they are designed with a specific task in mind, they are very interesting because most design choices can be related with properties of this task. The main ideas concerning their structure and functionality are summarised in the list below:
 			\begin{itemize}
@@ -155,11 +154,11 @@
 			\end{enumerate}
 		\subsection{Similarities and differences}
 		\label{arch. comparison}
-			All deep architectures have the goal of building a non-linear, distributed representation of the input. Deep Belief Networks and Stacked Autoencoders have this goal explicitly set as their training objective. Convolutional Neural Networks achieve this implicitly, since, although they are trained for classification, the consecutive filtering and pooling transformations capture an effective lower-dimensional description of the input at the last hidden layer of the network. Table (\ref{tbl comparisons}) summarises the main similarities and differences between the three methods.
+			All deep architectures have the goal of building a non-linear, distributed representation of the input. Deep Belief Networks and Stacked Autoencoders have this goal explicitly set as their training objective. Convolutional Neural Networks achieve this implicitly, since, although they are trained for classification, the consecutive filtering and pooling transformations capture an effective lower-dimensional description of the input at the last hidden layer of the network. Table \ref{tbl comparisons} summarises the main similarities and differences between the three methods.
 			
 			Since both Deep Belief Networks and Stacked Autoencoders are functionally similar, it is worth trying to compare them. Indeed, they can be used interchangeably for a task, meaning that they can be set to receive the same input and ultimately produce the same form of output (ex. a vector of features). The former capture the representation in stochastic variables (a distribution) while the latter learn a direct mapping of the input to another space. There is probably no easy answer on how to decide which is more effective for a given task.
 			
-		\begin{table}[h]
+		\begin{table}
 			\begin{tabular}{|c|c|c|c|}
 				\hline
 				Arch. & Learning & Training methods & Domains \\ \hline
@@ -182,7 +181,7 @@
 		Deep Networks have many parameters to be learned and are prone to overfitting. Consequently, a constraint has to be used during the training to avoid this. $L_1$ and $ L_2$ regularisations have been used, but the recent method of dropout appears to have better results in multiple domains and methods \cite{Srivastava2014}.
 		
 		Dropout is a powerful regularisation method, in which the weights of some randomly chosen units of the network,  (half of the total units of hidden layers was found to be optimal), are temporarily set to zero at each training step \cite{Srivastava2014,Dahl2013}. These units do not contribute to the given computation and can be, thus, seen as dropped from the network. When the network is used during testing, all the units of the network contribute, with their weights multiplied by the probability that the unit was present in the network. If half were being dropped, then the learned weights are multiplied by 1/2.
-		Dropout make the subject network to have different, randomly chosen units missing from each layer at each training step. This can be interpreted as a different network at each step, that shares weights with the other randomly created ones at previous steps. Then, during testing, all the different networks are averaged to give the output. Thus, dropout bears similarities with the older ideas of boosting and bagging. Dropout can also be seen as extending the previously discussed idea of Denoising Autoencoders (\ref{sec:SAE}). An approach to adding noise in these type of autoencoders is to set some values of the input to zero. Therefore, dropout is extending this idea by also adding such noise in hidden layers.
+		Dropout make the subject network to have different, randomly chosen units missing from each layer at each training step. This can be interpreted as a different network at each step, that shares weights with the other randomly created ones at previous steps. Then, during testing, all the different networks are averaged to give the output. Thus, dropout bears similarities with the older ideas of boosting and bagging. Dropout can also be seen as extending the previously discussed idea of Denoising Autoencoders \ref{sec:SAE}. An approach to adding noise in these type of autoencoders is to set some values of the input to zero. Therefore, dropout is extending this idea by also adding such noise in hidden layers.
 \section{Domains of applications}
 \label{sec:Domains}
 	The aim of this section is to present the most popular deep learning approaches for a number of domains and provide, whenever possible, some intuition about the reasons each architecture is used for each domain. The domains that will be discussed are:
@@ -201,7 +200,7 @@
 		There are some inherent challenges in object recognition. The output should be independent of variations in the input image, like translation, rotation, scaling, stretching and other distortions of the image. Also, objects may be partially obstructed by others, and have a noisy background. To give an example of these challenges, humans can recognise an upside-down car in any (visible) scale and in any position on an image, even if some part of it is hidden and the car is in a junk-yard (a noisy background). An ideal object recognition system should be able to match these abilities of the human visual cortex, achieving an invariance to input distortions. 		
 		There are two main approaches to object recognition in the Deep Learning literature. The former is using unsupervised methods to extract a more compact representation of the input. The other is using supervised training of the whole architecture at the same time, although minor improvements to accuracy have been achieved with some form of unsupervised pre-training.
 	
-		Supervised learning in image classification is dominated by the use of Convolutional Neural Networks (\ref{sec:CNN}). In the recent years, achievements \cite{Krizhevsky2012} in the field have attracted a broader interest.
+		Supervised learning in image classification is dominated by the use of Convolutional Neural Networks \ref{sec:CNN}. In the recent years, achievements \cite{Krizhevsky2012} in the field have attracted a broader interest.
 		Recent application include the transformation of the Convolutional Neural Network architecture for 3D inputs, used in human action recognition \cite{Ji2013}.
 	
 		Another approach to image related tasks, especially before the domination of the field by Convolutional Neural Networks in the recent years, is to have a an architecture with separate feature extraction and classification. The feature extraction module is trained in an unsupervised way, in order to learn a distributed and invariant representation of the input. Then supervised training is used to jointly train both modules, where the unsupervised module is calibrated for a more discriminative representation along with the training of the classifier of choice. Early works of Deep Learning methods are using this approach \cite{Hinton2006,Bengio2007a,Lee2011} by training Deep Belief Networks to learn a representation of images, mostly applied on faces and handwritten digits. Such methods were also tested on 3D object recognition \cite{Nair2009} and in learning features from video, exploit also their temporal coherence \cite{Mobahi2009}.
@@ -212,14 +211,14 @@
 		Natural Language Processing is a broad field that involves manipulating knowledge about language to tackle tasks to involve reasoning with the contents of words, phrases and sentences. There is a much larger variety of tasks that are relevant to this field. This is indeed expected, since using natural language is the most common way of encoding human knowledge and reasoning with it. 
 		Some popular applications of Deep Learning are on Sentiment Analysis, Semantic similarities of documents, Machine Translation,Named Entity Extraction. Since managing and reasoning about the world's information is a large industry, algorithms that can improve the process in terms of quality or speed can have an impact on this industry. Therefore, algorithms in this domain are promising and worth of further exploration.
 		
-		In all of these tasks, the common theme is that an automatically learned distributed representation of words is used, in the form of a vector, a method called "word embedding" \cite{Collobert2008}. This comes in contrast to the traditional approach in Natural Language Processing, where the words are encoded in a (very) sparse vector, a method called Bag of Words.Depending on the training process involved in learning the word representation, similarities and other relations such as analogies can be discovered. Most approaches rely on multilayer Neural Networks to learn these embeddings \cite{Collobert2008,Collobert2011}. They are either feed-forward or recurrent models. Recurrent Neural Networks are  also tested, and are a logical choice since they can capture the serial relation between words, or even letters. 
+		In all of these tasks, the common theme is that an automatically learned distributed representation of words is used, in the form of a vector, a method called "word embedding" \cite{Collobert2008}. This comes in contrast to the traditional approach in Natural Language Processing, where the words are encoded in a (very) sparse vector, a method called Bag of Words.Depending on the training process involved in learning the word representation, similarities and other relations such as analogies can be discovered. Most approaches rely on multilayer Neural Networks to learn these embeddings \cite{Collobert2008,Collobert 2011}. They are either feed-forward or recurrent models. Recurrent Neural Networks are  also tested, and are a logical choice since they can capture the serial relation between words, or even letters. 
 		 
-		Word embedding is a great example of the expressive power of distributed representations\cite{Collobert2008}: Since a word is encoded by a combination of elements in a vector, relations between words are much easier to be expressed. For example, a word that is similar to two words that are dissimilar between them, can share elements of the vector with both, while the others do not share any.   Therefore complex relationships between words can be captured.For example, "crane" is related to both birds and construction machinery words, but other words about birds and machinery are unrelated. In fact, since the combinations of elements are exponential to the size of a vector, an exponential number of interactions can be potentially expressed. This intuitively justifies the choice of a distributed representation to encode entities with complex relations between them.
+		Word embedding is a great example of the expressive power of distributed representations\cite{Collobert 2008}: Since a word is encoded by a combination of elements in a vector, relations between words are much easier to be expressed. For example, a word that is similar to two words that are dissimilar between them, can share elements of the vector with both, while the others do not share any.   Therefore complex relationships between words can be captured.For example, "crane" is related to both birds and construction machinery words, but other words about birds and machinery are unrelated. In fact, since the combinations of elements are exponential to the size of a vector, an exponential number of interactions can be potentially expressed. This intuitively justifies the choice of a distributed representation to encode entities with complex relations between them.
 		A recent finding gives an impressive insight on the representation obtained: Analogies are autonomously learned, and can be discovered by subtracting the vectors that represent each word \cite{Mikolov2013}. For example $f("king")-f("queen") \approx f("man")-f("woman") $, where f is the embedding function.
 		
-		The first related work was on finding semantic similarities of documents in an unsupervised way. This can be used to retrieve similar documents given a new one, or to reduce the dimensions of the learned space to plot the documents as points and discover clusters \cite{Hinton2006,Salakhutdinov2009a}. A very interesting expansion of word embedding is bilingual embeddings, where words from two languages are embedded in the same space. This allows for interesting applications, with the most useful one being machine translation \cite{Devlin2014}. Another field where these approaches prove useful is text sentiment analysis, where the sentiment of a piece of text is evaluated. Interesting findings for this can be found in the following works: \cite{Le2014,Socher2011}. The identification of the syntactic role of words  called part-of-speech tagging has been also assisted by a word embeddings \cite{Santos2014}. A recent study presented a deep learning approach to the hard problem of understanding more subtle relations like the context and structure of a text \cite{Ji2014a}. 
+		The first related work was on finding semantic similarities of documents in an unsupervised way. This can be used to retrieve similar documents given a new one, or to reduce the dimensions of the learned space to plot the documents as points and discover clusters \cite{Hinton2006,Salakhutdinov2009a}. A very interesting expansion of word embedding is bilingual embeddings, where words from two languages are embedded in the same space. This allows for interesting applications, with the most useful one being machine translation \cite{Devlin2014}. Another field where these approaches prove useful is text sentiment analysis, where the sentiment of a piece of text is evaluated. Interesting findings for this can be found in the following works: \cite{Le2014,Socher2011}. The identification of the syntactic role of words  called part-of-speech tagging has been also assisted by a word embeddings \cite{Santos2014}. A recent study presented a deep learning approach to the hard problem of understanding more subtle relations like the context and structure of a text \cite{Ji2014}. 
 		
-		The application of Deep Learning methods in Natural Language Processing follows the common theme, where these methods outperform engineered features and local learning methods. However, the improvement is smaller in comparison to the achievements in vision tasks \cite{Deng2014a}. Since major breakthroughs in this field are more recent, like statistical translation using bilingual word embeddings, the study of this domains is expected to be further intensified. Indeed, major improvements in this domains could have even more impact in the world than those in Computer Vision.
+		The application of Deep Learning methods in Natural Language Processing follows the common theme, where these methods outperform engineered features and local learning methods. However, the improvement is smaller in comparison to the achievements in vision tasks \cite{Deng2014}. Since major breakthroughs in this field are more recent, like statistical translation using bilingual word embeddings, the study of this domains is expected to be further intensified. Indeed, major improvements in this domains could have even more impact in the world than those in Computer Vision.
 		
 %		A task that is related to the above domain is Speech recognition. This task has two main components, the extraction of information from sound and the transformation of these sound features to text. The latter is obviously related to Natural Language Processing problems, since knowledge about language can greatly assist the predicted text. \todo{Throw some refs on speech recogntion}
 	
@@ -237,7 +236,7 @@
 	% Prove the thesis!!
 	%This work reviews the promising domain of Deep Machine Learning, with the purpose of providing the practical information about the field. It explains the limitations of shallow architectures, motivating the development of deep architectures. It provides an intuitive explanation of distributed representation, that is the learning objective of Deep Learning methods. It  describes the three most popular methods in the field, namely Convolutional Neural Networks, Deep Belief Networks and Stacked Autoencoders, providing a brief comparison. It explains important ideas concerning the implementation of these methods. Lastly, it summarises the applications deep representation learning methods in the domains of Computer Vision and Natural Language Processing.
 
-	In order to explain the motivation behind the development of representation learning, this work initially presented the shortcomings of kernel-based methods (\ref{sub: kernel limitations}), which practically constitute the most successful alternatives to representation learning methods. The weaknesses of engineered feature extraction (\ref{sub: eng. features}) are then highlighted, concluding to a number of indicators of the potential need for a better alternative. The main underlying idea of all Deep Learning methods is described in \autoref{sec:Dist. rep.}, aiming to explain the underlying reasons for their comparative advantage over other Machine Learning methods in a number of domains. The three most popular architectures of the field are reviewed in \autopageref{Architectures}, namely Convolutional Neural Networks (\ref{sec:CNN}), Deep Belief Networks (\ref{sec:DBN}) and Stacked Autoencoders (\ref{sec:SAE}), aiming to provide a simple explanation of how and why they work, pointing to original research for a more detailed explanation of their implementation. A simple comparison of these methods is made (\ref{arch. comparison}), summarising their main points. Additionally, a couple of the most influencing ideas that greatly improve the training of representation learning methods are explained in \autoref{impl. ideas}, namely layer-wise pre-training (\ref{par:Pre-training}) and dropout (\ref{par:Dropout}). This work concludes with a survey of applications of Deep Learning methods (\ref{sec:Domains}) in the important domains of Computer Vision (\ref{sec:CV}) and Natural Language Processing (\ref{sec: NLP_Audio}), providing practical examples of the previously presented concepts.
+	In order to explain the motivation behind the development of representation learning, this work initially presented the shortcomings of kernel-based methods \ref{sub: kernel limitations}, which practically constitute the most successful alternatives to representation learning methods. The weaknesses of engineered feature extraction \ref{sub: eng. features} are then highlighted, concluding to a number of indicators of the potential need for a better alternative. The main underlying idea of all Deep Learning methods is described in \autoref{sec:Dist. rep.} aiming to explain the reasons for the comparative advantage of these over other Machine Learning methods in a number of domains. The three most popular architectures of the field are reviewed in \autopageref{Architectures}, namely Convolutional Neural Networks \ref{sec:CNN}, Deep Belief Networks \ref{sec:DBN} and Stacked Autoencoders \ref{sec:SAE}, aiming to provide a simple explanation of how and why they work, pointing to original research for a more detailed explanation of their implementation. A simple comparison of these methods is made \ref{arch. comparison}, summarising their main points. Additionally, a couple of the most influencing ideas that greatly improve the training of representation learning methods are explained in \autopageref{impl. ideas}, namely layer-wise pre-training \ref{par:Pre-training} and dropout \ref{par:Dropout}. This work concludes with a survey of applications of Deep Learning methods \ref{sec:Domains} in the important domains of Computer Vision \ref{sec:CV} and Natural Language Processing \ref{sec: NLP_Audio}, providing practical examples of the previously presented concepts.
 	
 \bibliographystyle{plain}	
 \bibliography{library}	
